--- a/app/src/main/res/layout/activity_aftmain.xml
+++ b/app/src/main/res/layout/activity_aftmain.xml
@@ -3,12 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <fragment
+    android:layout_height="match_parent"
+    tools:context=".AFTMain">
+
+<!--    <androidx.appcompat.widget.SearchView-->
+<!--        android:id="@+id/searchView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:queryHint="Search location"-->
+<!--        />-->
+    <com.google.android.gms.maps.MapView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:id="@+id/id_map"/>
+        android:id="@+id/map"/>
 
 
 
