--- a/app/src/main/res/layout/activity_aftmain.xml
+++ b/app/src/main/res/layout/activity_aftmain.xml
@@ -3,15 +3,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        android:id="@+id/toolbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="?attr/actionBarSize"-->
+<!--        android:background="?attr/colorPrimary"-->
+<!--        app:title="My Toolbar"-->
+<!--        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
+<!--        android:elevation="4dp"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        tools:ignore="InvalidId" />-->
+
     <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:id="@+id/id_map"/>
+<!--    <androidx.viewpager.widget.ViewPager-->
+<!--        android:id="@+id/viewPager"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_below="@+id/id_map"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        tools:ignore="UnknownId" />-->
 
+<!--    <com.google.android.material.tabs.TabLayout-->
+<!--        android:id="@+id/tabLayout"-->
+<!--        android:layout_below="@+id/viewPager"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        tools:ignore="UnknownId" />-->
 
-
-
-
-</RelativeLayout>
+    </RelativeLayout>
